--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,14 +1,19 @@
 .home-container {
-  background: url("../../images/bg2.jpg");
+  background: linear-gradient(to right, red, blue);
   background-repeat: no-repeat;
   width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-  position: fixed;
-  opacity: 0.9;
-  display: flex;
-  justify-content: space-evenly;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 30px;
   align-items: center;
   flex-wrap: wrap;
+}
+
+@media only screen and (max-width: 600px) {
+  .home-container {
+    display: grid;
+    height: 200vh;
+    grid-template-columns: 400px;
+  }
 }
